--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
-      <link rel="stylesheet" href="./styles/dark.css">
-      <link rel="stylesheet" href="./styles/light.css"> 
-      <meta name="color-scheme" content="dark light"> 
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
+    <meta name="color-scheme" content="dark light"> 
   </head>
   <body class="page title-decor">
     <header class="header decorated-zone title-decor">
@@ -120,9 +121,9 @@
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
       </h2> 
       <ul class="content__list">
-        <span class="content__list-item-title title-decor">
+        <h2 class="content__list-item-title title-decor">
           5 простых (на самом деле не очень) советов
-        </span>
+        </h2>
         <li class="content__list-item">
           
           <h2 class="content__list-item-title weight_normal title-decor">
