--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <h2 class="content__title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2> 
-        <h2 class="content__list-item-title title-decor">
-          5 простых (на самом деле не очень) советов
-        </h2>
         
       <ul class="content__list">
         <li class="content__list-item">
+          <h2 class="content__list-item-title title-decor additional-title">
+            5 простых (на самом деле не очень) советов
+          </h2>
           <h2 class="content__list-item-title weight_normal title-decor">
             Представьте небо и облака
           </h2>
