--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./styles/light.css"> 
     <meta name="color-scheme" content="dark light"> 
   </head>
-  <body class="page title-decor">
-    <header class="header decorated-zone title-decor">
+  <body class="page">
+    <header class="header decorated-zone">
       <div aria-hidden="true" class="decor__element">rec</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
